@@ -36,6 +36,7 @@ Current:
     - ehajo-isp (commercial version of USBtiny)
     - XplainedPro in UPDI mode
     - XplainedMini in UPDI mode
+    - JTAGICE3 in UPDI mode
     - Atmel Powerdebugger in all modes (JTAG, PDI, UPDI, debugWIRE, ISP)
 
   * Bugfixes:
@@ -73,6 +74,7 @@ Current:
     patch #9820: Fix some out-of-bounds/uninitialized issues
     patch #9818: correct typos in SVN rev 1429
     patch #9732: usbtiny_paged_load overflows buffer e.g. when reading EEPROM
+    patch #9966: Add JTAGICE3 in UPDI mode
 
   * Internals:
     - New avrdude.conf keyword "family_id", used to verify SIB attributes
